Pressing backspace during empty number input for translation results in 0.5828 increments #39347

Closed
opened 2014-03-22 18:21:15 +01:00 by Patrick Boelens · 8 comments

System Information
Mac OSX 10.6.8

Blender Version
2.70, 12ce5ae

Short description of error
When entering a translation value using numinput in advanced mode, pressing backspace when there are no more characters in front of the cursor results in 0.5828 increments being added to the current value.

Exact steps for others to reproduce the error

  • Open the default Blender scene
  • Press - - ]- - - [= or numpad asterisk] [backspace] [backspace] [backspace]

Result: Every subsequent [backspace] press will add 0.5828 to the current translation value.

I only found this to work for translation; other transforms (scale, rotate) and numeric input fields seem to work fine.

**System Information** Mac OSX 10.6.8 **Blender Version** 2.70, 12ce5ae **Short description of error** When entering a translation value using numinput in advanced mode, pressing backspace when there are no more characters in front of the cursor results in 0.5828 increments being added to the current value. **Exact steps for others to reproduce the error** - Open the default Blender scene - Press - [x] - [x] ]- [x] - [x] - [x] [= or numpad asterisk] [backspace] [backspace] [backspace] Result: Every subsequent [backspace] press will add 0.5828 to the current translation value. I only found this to work for translation; other transforms (scale, rotate) and numeric input fields seem to work fine.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Senshi

Added subscriber: @Senshi
Bastien Montagne self-assigned this 2014-03-22 18:26:27 +01:00

Ah, this time I can reproduce it! Thanks for the report. :)

Ah, this time I can reproduce it! Thanks for the report. :)

Excellent, thanks!

Excellent, thanks!

This issue was referenced by blender/blender-addons-contrib@fcaa018249

This issue was referenced by blender/blender-addons-contrib@fcaa018249226e72a21dc73f49af260f31c2e18b

This issue was referenced by fcaa018249

This issue was referenced by fcaa018249226e72a21dc73f49af260f31c2e18b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit fcaa018249.

Closed by commit fcaa018249.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39347
No description provided.