Fix T39347: Pressing backspace during empty number input for translation results in 0.5828 increments

Interesting one, took me hours to understand the issue - a stupid typo checking the wrong value against the wrong flag (present since 2008!).